--- a/css/login_signup.css
+++ b/css/login_signup.css
@@ -2,26 +2,31 @@
   margin: 0;
   padding: 0;
   font-family: Albert sans, Geneva, Tahoma, sans-serif;
+  -webkit-user-select:none;user-select:none;
 }
+ 
+
+
 body {
-  background-color: white;
-  z-index: -1;
+  background-color: rgb(255, 255, 255);
+  min-height: 100vh;
 }
 
-.container {
+.container-login {
+  min-width: 100%;
+  min-height: 100vh;
+  padding: 0;
+  position:absolute;
+  top:0px;
   visibility: hidden;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  vertical-align: center;
 }
 
 .signup-popup {
-  background-color: aliceblue;
   padding: 25px 35px;
-  background-color: rgb(235, 235, 235);
-  border-radius: 3px;
-  transition: ease-in 3s;
+  background-color: rgb(255, 255, 255);
+  border-radius: 8px;
+  height: max-content;
 }
 .signup-title {
   font-size: 24px;
@@ -29,6 +34,7 @@ body {
   margin-bottom: 20px;
 }
 .signup-popup input {
+  background-color: #0000000d;
   text-align: left;
   font-size: 14px;
   width: 98%;
@@ -37,7 +43,7 @@ body {
   border-radius: 4px;
   border: none;
 }
-.container a {
+.container-login a {
   font-size: 12px;
   line-height: 20px;
   color: rgb(167, 167, 167);
@@ -47,19 +53,21 @@ body {
   color: rgb(255, 110, 110);
 }
 
-.container {
+.container-login {
   display: flex;
-  height: 100vh;
+  height: 32em;
   justify-content: center;
   align-items: center;
-  vertical-align: center;
+  vertical-align: middle;
   z-index: 2;
+  position: fixed;
+  
 }
 .login-popup {
-  background-color: aliceblue;
+  display: flex;
   padding: 25px 35px;
-  background-color: rgb(235, 235, 235);
-  border-radius: 3px;
+  background-color: #ffffff;
+  border-radius: 8px;
 }
 .login-title {
   font-size: 24px;
@@ -67,15 +75,16 @@ body {
   margin-bottom: 20px;
 }
 .login-popup input {
+  background-color: #0000000f;
   text-align: left;
   font-size: 14px;
   width: 98%;
   height: 40px;
-  padding: 6px 20px;
+  padding: 6px 18px;
   border-radius: 4px;
   border: none;
 }
-.container a {
+.container-login a {
   font-size: 12px;
   line-height: 20px;
   color: rgb(167, 167, 167);
