--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
+  font-family: Albert sans,sans serif;
   a {
     text-decoration: none;
     color:black; 
@@ -12,11 +15,21 @@
   display: grid;
   width: 100%;
   grid-template-rows: 1fr 60px 60px 1fr;
-
+}
   .panels {
     background-color: antiquewhite;
     height: 500px;
   }
+
+  .panel-info {
+    width: 25%;
+    border: 1px solid red;
+  }
+
+  .panel-info h1{
+    letter-spacing: 2px;
+  }
+
   .price-drop {
     line-height: 60px;
     width: 100%;
@@ -61,16 +74,12 @@
     column-gap: 10px;
     overflow: hidden;
   }
-}
+
 .categories-sec {
   display: flex;
   height: 100%;
   column-gap: 20px;
   margin-left: 20px;
-}
-
-@media (max-width:400px){
-
 }
 
 .item-container {
@@ -82,11 +91,16 @@
   height: 500px;
   background-color: rgb(219, 219, 219);
   border-radius: 4px;
-  transition: ease-in-out 0.6s;
+  transition: ease-in-out 0.3s;
 }
 .item-container:hover {
-  width: 400px;
+  scale: 1.1;
   box-shadow: 0 0 10px rgba(0,0,0,0.6);
+}
+@media (max-width:600px) {
+  .item-container {
+    scale:0.9;
+  }
 }
 
 .best-seller-title, .shop-the-look-title {
@@ -124,7 +138,7 @@
   flex-shrink: 2;
 }
 .cloths-item:hover {
-  scale: 1.05;
+  scale: 1.07;
   box-shadow: 0 0 7px rgba(0,0,0,0.2);
 }
 
@@ -147,6 +161,7 @@
 
 @media (max-width :750px) {
   .container-cloths {
+    scale: 0.9;
     grid-template-columns: repeat(1, 1fr) ;
   }
 }
@@ -158,14 +173,26 @@
   align-items: center;
 } 
 .info {
-  height: 100%;width: 100%;
+  height: auto;width: 100%;
   display: grid;
   grid-template-columns: repeat(4,1fr);
   padding: 40px;
   gap: 40px;
 }
+
+@media (max-width:750px){
+  .info {
+    grid-template-columns: repeat(2,1fr);
+  }
+}
+@media (max-width:500px){
+  .info {
+    grid-template-columns: repeat(1,1fr);
+    scale: 0.8;
+  }
+}
+
 .info-div {
-  
   border-radius: 8px;
   border: 1px solid rgb(93, 93, 93);
   text-align: center;
@@ -173,25 +200,31 @@
   align-items: center;
   font-size: 20px;
   padding: 30px;
+  height: 200px;
+  overflow: hidden;
+  max-width: 250 px;
+  border-color: rgb(227, 227, 227);
 }
 .info-div h1{
-  font-weight: bold;
-  font-size: 16px;
+  font-weight:600;
+  font-size: 14px;
   letter-spacing: 1px;
 }
 .info-div p {
-  font-size: 14px;
-  font-weight:100;
+  font-size: 12px;
+  font-weight:400;
   letter-spacing: 1px;
 }
 
 .info-div img {
-  scale: 3;
+  scale: 1.6;
   padding: 30px;
-  animation-name: anime;
-  animation-duration:3s;
+  transition: ease-in-out 0.3s;
+  /* animation-name: anime; */
+  /* animation-duration:3s; */
+  /* animation-delay: 5s; */
 }
-  @keyframes anime {
+  /* @keyframes anime {
   from {
     scale: 1;
   }
@@ -200,9 +233,9 @@
     scale:3.5;
   }
   
-}
+} */
 .info-div img:hover {
-  scale: 3.5;
+  scale: 2;
 }
 
 
