--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,8 @@
 .navbar {
   height: 45px;
   width: 100%;
-  background-color: rgb(255, 255, 255);
+  background-color: transparent;
+  border-bottom: 0.5px solid rgba(128, 128, 128, 0.151);
 }
 
 .headings {
@@ -48,15 +49,15 @@
 
 .menu-bar{
   width:100%;
-  height:80px;
-  background-color: antiquewhite;
+  height: 70px;
+  background-color: transparent;
   display: flex;
   column-gap: auto;
 
   
 }
 .logo span {
-  color:rgb(233, 213, 0)
+  color:rgb(233, 213, 0);
 }
 
 /* add logo*/
