--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-  font-family: Albert sans,sans serif;
+  font-family: Albert sans, sans serif;
   a {
     text-decoration: none;
-    color:black; 
-    transition: ease-in-out 0.3s; 
+    color: black;
+    transition: ease-in-out 0.3s;
   }
   a:hover {
     color: red;
@@ -14,129 +14,153 @@
 .main-content-container {
   display: grid;
   width: 100%;
-  grid-template-rows: 600px 60px 60px 1fr;
+  grid-template-rows: auto  60px 1fr;
 }
-  .panels {
-    display: flex;
-    background-color: antiquewhite;
-    justify-content: center;
-  }
+.panels {
+  display: flex;
+  background-color: antiquewhite;
+  justify-content: flex-start;
+  overflow: hidden;
+}
 
-  .panel-info {
-    text-align: center;
-    width: 25%;
-    position: absolute;
-    bottom: 30px;
-  }
+.panel-info {
+  position: absolute;
+  z-index: 4;
+  align-self: center;
+  justify-self: center;
+  margin-left: 100px;
+  text-align: center;
+}
+.panels img {
+  width:100vw;
+  max-width: 1700px;
+}
+.panel-info h1 {
+  font-size: 80px;
+  letter-spacing: 3px;
+}
 
-  .panel-info h1{
-    font-size: 50px;
-    letter-spacing: 3px;
-  }
+.panel-info button {
+  color: white;
+  background-color: black;
+  border-radius: 5px;
+  padding: 10px 30px;
+  transition: ease-in-out 0.3s;
+}
 
-  .panel-info button {
-    color:white;
-    background-color: black;
-    border-radius: 5px;
-    padding: 10px 30px;
-    transition: ease-in-out 0.3s;
-  }
+.panel-info button:hover {
+  color: black;
+  background-color: white;
+}
 
-  .panel-info button:hover {
-    color: black;
-    background-color: white;
-  }
+.price-drop {
+  line-height: 60px;
+  width: 100%;
+  background-color: #ffb321;
+  height: 100%;
+  font-size: 30px;
+}
+.shop-by-categories {
+  margin-top: 20px;
+  margin-left: 10px;
+  align-self: center;
+  padding-left: 20px;
+}
+.shop-by-categories a {
+  color: black;
+  background-color: transparent;
+  text-decoration: none;
+  border-radius: 50px;
+  padding: 5px 10px;
+  margin-right: 5px;
+  border: 1px solid black;
+  cursor: pointer;
+}
+.shop-by-categories span {
+  font-weight: bold;
+  font-size: 20px;
+  font-family: verdana;
+  margin-left: 20px;
+}
+.shop-by-categories a:hover {
+  color: rgb(255, 255, 255);
+  background-color: rgb(11, 10, 10);
+}
 
-  .price-drop {
-    line-height: 60px;
-    width: 100%;
-    background-color: #ffb321;
-    height: 100%;
-    font-size: 30px;
-  }
-  .shop-by-categories {
-    margin-top: 20px;
-    margin-left: 10px;
-    align-self: center;
-    padding-left: 20px;
-  }
-  .shop-by-categories a {
-    color: black;
-    background-color: transparent;
-    text-decoration: none;
-    border-radius: 50px;
-    padding: 5px 10px;
-    margin-right: 5px;
-    border: 1px solid black;
-    cursor: pointer;
-  }
-  .shop-by-categories span {
-    font-weight: bold;
-    font-size: 20px;
-    font-family: verdana;
-    margin-left:20px
-  };
-  .shop-by-categories a:hover {
-    color: rgb(255, 255, 255);
-    background-color: rgb(11, 10, 10);
-  }
+/* Category Section  */
 
-  /* Category Section  */
-
-  .categories-item-list {
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    column-gap: 10px;
-    overflow: hidden;
-  }
+.categories-item-list {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  column-gap: 10px;
+  overflow: hidden;
+}
 
 .categories-sec {
+  
   display: flex;
   height: 100%;
-  column-gap: 20px;
   margin-left: 20px;
 }
 
 .item-container {
-
-  width: 400px;
-  padding: 30px;
-  margin:30px;
-  margin-left:40px;
-  height: 500px;
-  background-color: rgb(219, 219, 219);
+  scale: 0.9;
   border-radius: 4px;
+  margin-right: 30px;
+  overflow: hidden;
   transition: ease-in-out 0.3s;
 }
-.item-container:hover {
-  scale: 1.1;
-  box-shadow: 0 0 10px rgba(0,0,0,0.6);
+
+.categories-description{
+  position: absolute;
+  background-color: #ffffff; 
+  bottom:20px;
+  left: 15px;
+  color: #000000; 
+  font-size: 16px; 
+  border-radius: 3px;
+  text-align: center;
+  padding: 10px 30px;
 }
-@media (max-width:600px) {
+
+.item-container img {
+  height: 460px;
+  transition: ease-in-out 0.3s;
+}
+
+.item-container img:hover {
+  scale: 1.1;
+}
+.item-container:hover {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+@media (max-width: 600px) {
   .item-container {
-    scale:0.9;
+    scale: 0.9;
   }
 }
 
-.best-seller-title, .shop-the-look-title {
+.best-seller-title,
+.shop-the-look-title {
   display: flex;
   text-align: center;
   justify-content: center;
   font-size: 18px;
-  font:bold ;
+  font: bold;
   padding: 30px 100px;
-  background-color: rgb(255, 255, 255); 
-  letter-spacing:3px;
+  background-color: rgb(255, 255, 255);
+  letter-spacing: 3px;
   margin-bottom: 20px;
 }
-.best-seller-title p, .shop-the-look-title p{
+.best-seller-title p,
+.shop-the-look-title p {
   font-size: 14px;
   letter-spacing: 2px;
 }
 
-.container-cloths{
+.container-cloths {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 30px;
@@ -156,30 +180,30 @@
 }
 .cloths-item:hover {
   scale: 1.07;
-  box-shadow: 0 0 7px rgba(0,0,0,0.2);
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.2);
 }
 
-@media (max-width :1800px) {
+@media (max-width: 1800px) {
   .container-cloths {
-    grid-template-columns: repeat(4, 1fr)  ;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
-@media (max-width :1450px) {
+@media (max-width: 1450px) {
   .container-cloths {
-    grid-template-columns: repeat(3, 1fr)  ;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
-@media (max-width : 1100px) {
+@media (max-width: 1100px) {
   .container-cloths {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media (max-width :750px) {
+@media (max-width: 750px) {
   .container-cloths {
     scale: 0.9;
-    grid-template-columns: repeat(1, 1fr) ;
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
@@ -188,30 +212,29 @@
   display: flex;
   justify-content: center;
   align-items: center;
-} 
+}
 .info {
-  
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   padding: 40px;
   gap: 60px;
 }
 
-@media (max-width:900px){
+@media (max-width: 900px) {
   .bottom-info {
     height: 500px;
   }
   .info {
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 40px;
   }
 }
-@media (max-width:500px){
+@media (max-width: 500px) {
   .bottom-info {
     height: 700px;
   }
   .info {
-    grid-template-columns: repeat(1,1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 10px;
     scale: 0.85;
   }
@@ -230,14 +253,14 @@
   max-width: 250 px;
   border-color: rgb(227, 227, 227);
 }
-.info-div h1{
-  font-weight:600;
+.info-div h1 {
+  font-weight: 600;
   font-size: 14px;
   letter-spacing: 1px;
 }
 .info-div p {
   font-size: 12px;
-  font-weight:400;
+  font-weight: 400;
   letter-spacing: 1px;
 }
 
@@ -249,7 +272,7 @@
   /* animation-duration:3s; */
   /* animation-delay: 5s; */
 }
-  /* @keyframes anime {
+/* @keyframes anime {
   from {
     scale: 1;
   }
@@ -262,7 +285,3 @@
 .info-div img:hover {
   scale: 2;
 }
-
-
-
-
