--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
 .main-content-container {
   display: grid;
   width: 100%;
-  grid-template-rows: auto  60px 1fr;
+  grid-template-rows: auto 60px 1fr;
 }
 .panels {
   display: flex;
@@ -32,7 +32,7 @@
   text-align: center;
 }
 .panels img {
-  width:100vw;
+  width: 100vw;
   max-width: 1700px;
 }
 .panel-info h1 {
@@ -99,7 +99,6 @@
 }
 
 .categories-sec {
-  
   display: flex;
   height: 100%;
   margin-left: 20px;
@@ -113,13 +112,13 @@
   transition: ease-in-out 0.3s;
 }
 
-.categories-description{
+.categories-description {
   position: absolute;
-  background-color: #ffffff; 
-  bottom:20px;
+  background-color: #ffffff;
+  bottom: 20px;
   left: 15px;
-  color: #000000; 
-  font-size: 16px; 
+  color: #000000;
+  font-size: 16px;
   border-radius: 3px;
   text-align: center;
   padding: 10px 30px;
@@ -160,36 +159,41 @@
   letter-spacing: 2px;
 }
 
+.shop-the-look-title {
+  margin-top: 50px;
+}
+
 .container-cloths {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 30px;
-  overflow-wrap: anywhere;
-  justify-content: center;
-  align-items: center;
+  grid-template-columns: repeat(4, 24%);
+  row-gap: 60px;
 }
 
 .cloths-item {
-  margin: 20px;
-  height: 500px;
-  min-width: 300px;
-  border-radius: 4px;
-  background-color: rgb(205, 205, 205);
-  transition: ease-in-out 0.3s;
-  flex-shrink: 2;
+  display: flex;
+  overflow: hidden;
+  margin-left: 40px;
+  height: 465px;
+  width: 330px;
 }
 .cloths-item:hover {
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+.cloths-item img:hover {
   scale: 1.07;
-  box-shadow: 0 0 7px rgba(0, 0, 0, 0.2);
+}
+.cloths-item img {
+  transition: ease-in-out 0.3s;
 }
 
-@media (max-width: 1800px) {
+@media (max-width: 1500px) {
   .container-cloths {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media (max-width: 1450px) {
+@media (max-width: 1300px) {
   .container-cloths {
     grid-template-columns: repeat(3, 1fr);
   }
@@ -200,11 +204,42 @@
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 700px) {
   .container-cloths {
     scale: 0.9;
     grid-template-columns: repeat(1, 1fr);
   }
+}
+
+.cloths-item-logos {
+  width: 40px;
+  height: 40px;
+  padding-top: 6px;
+  text-align: center;
+  color: #ffffff;
+  background-color: rgb(255, 255, 255);
+}
+
+.item-logo-container {
+  opacity: 0;
+  position: relative;
+  left: -240px;
+  top: 400px;
+  display: flex;
+  column-gap: 7px;
+  height: 40px;
+  width: 200px;
+  transition: ease-in-out 0.4s;
+}
+
+.cloths-item img:hover ~ .item-logo-container {
+  transform: translatey(-30px) scale(1.2);
+  opacity: 1;
+}
+
+.cloths-item img:active ~ .item-logo-container {
+  transform: translatey(-30px) scale(1.2);
+  opacity: 1;
 }
 
 .bottom-info {
